--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -77,5 +77,18 @@
 				}
 			}
 		}
+	},
+  "name": "FarmTenz",
+  "short_name": "FarmTenz",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+	{
+	  "src": "img/farmacia.png",
+	  "sizes": "192x192",
+	  "type": "image/png"
 	}
+  ]
 }
