--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "br.com.switch.farmtenz",
+	"name": "br.com.switch.salestem",
 	"version": "1.0.0",
-	"description": "UI5 Application: br.com.switch.farmtenz",
+	"description": "Salestem",
 	"author": "Augusto Oliveira",
 	"license": "Apache-2.0",
 	"scripts": {
 		"clean": "rimraf dist coverage",
 		"build": "ui5 build --clean-dest",
 		"build:opt": "ui5 build self-contained --clean-dest --all",
-		"start": "ui5 serve --port 8080 -o index.html",
+		"start": "ui5 serve --port 8081 -o index.html",
 		"start-cdn": "ui5 serve --port 8080 -o index-cdn.html",
 		"start:dist": "npm start -- --config ui5-dist.yaml",
 		"start:dist-cdn": "npm run start-cdn -- --config ui5-dist.yaml",
