--- a/ui5-dist.yaml
+++ b/ui5-dist.yaml
@@ -1,6 +1,6 @@
 specVersion: "3.0"
 metadata:
-  name: br.com.switch.farmtenz
+  name: br.com.switch.salestem
 type: application
 resources:
   configuration:
