--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,8 +1,7 @@
 {
 	"_version": "1.12.0",
-
 	"sap.app": {
-		"id": "br.com.switch.farmtenz",
+		"id": "br.com.switch.salestem",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
@@ -11,7 +10,6 @@
 			"version": "1.0.0"
 		}
 	},
-
 	"sap.ui": {
 		"technology": "UI5",
 		"icons": {},
@@ -21,15 +19,13 @@
 			"phone": true
 		}
 	},
-
 	"sap.ui5": {
 		"rootView": {
-			"viewName": "br.com.switch.farmtenz.view.App",
+			"viewName": "br.com.switch.salestem.view.App",
 			"type": "XML",
 			"async": true,
 			"id": "app"
 		},
-
 		"dependencies": {
 			"minUI5Version": "1.120.0",
 			"libs": {
@@ -37,58 +33,90 @@
 				"sap.m": {}
 			}
 		},
-
 		"handleValidation": true,
-
 		"contentDensities": {
 			"compact": true,
 			"cozy": true
 		},
-
 		"models": {
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "br.com.switch.farmtenz.i18n.i18n"
+					"bundleName": "br.com.switch.salestem.i18n.i18n"
 				}
 			}
 		},
-
 		"routing": {
 			"config": {
 				"routerClass": "sap.m.routing.Router",
 				"viewType": "XML",
-				"viewPath": "br.com.switch.farmtenz.view",
+				"viewPath": "br.com.switch.salestem.view",
 				"controlId": "app",
+				"bypassed": {
+					"target": "NotFound"
+				},
 				"controlAggregation": "pages",
 				"async": true
 			},
 			"routes": [
 				{
 					"pattern": "",
-					"name": "main",
-					"target": "main"
+					"name": "login",
+					"target": "login"
+				},
+				{
+					"pattern": "register",
+					"name": "register",
+					"target": "register"
+				},
+				{
+					"name": "NotFound",
+					"pattern": "NotFound",
+					"target": "NotFound"
+				},
+				{
+					"pattern": "home/{token}",
+					"name": "home",
+					"target": "home"
 				}
 			],
 			"targets": {
-				"main": {
-					"viewId": "main",
-					"viewName": "Main"
+				"login": {
+					"viewId": "Login",
+					"transition": "show",
+					"viewName": "loginView/Login"
+				},
+				"register": {
+					"viewId": "Register",
+					"transition": "show",
+					"viewName": "registerView/Register"
+				},
+				"NotFound": {
+					"viewId": "NotFound",
+					"viewName": "NotFound",
+					"transition": "show",
+					"clearControlAggregation": false
+				},
+				"home": {
+					"viewId": "Home",
+					"viewName": "homeView/Home",
+					"transition": "slide",
+					"clearControlAggregation": false
 				}
 			}
 		}
 	},
-  "name": "FarmTenz",
-  "short_name": "FarmTenz",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-	{
-	  "src": "img/farmacia.png",
-	  "sizes": "192x192",
-	  "type": "image/png"
-	}
-  ]
+	"name": "Salestem",
+	"short_name": "Salestem",
+	"start_url": "/index.html",
+	"display": "standalone",
+	"background_color": "#ffffff",
+	"theme_color": "#000000",
+	"icons": [
+		{
+			"src": "img/farmacia.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		}
+	]
 }
