Adicionando um Dialog de configurações

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -108,7 +108,7 @@
 	},
 	"name": "Salestem",
 	"short_name": "Salestem",
-	"start_url": "/index.html",
+	"start_url": "/",
 	"display": "standalone",
 	"background_color": "#ffffff",
 	"theme_color": "#000000",
