Adicionando o conteúdo da primeira página e sua tabela com o Dialog de Sort

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -75,7 +75,7 @@
 					"target": "NotFound"
 				},
 				{
-					"pattern": "home/{token}",
+					"pattern": "{token}/home",
 					"name": "home",
 					"target": "home"
 				}
