--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "br.com.switch.salestem",
+	"name": "br.com.switch.farmtenz",
 	"version": "1.0.0",
-	"description": "Salestem",
+	"description": "Farmtenz",
 	"author": "Augusto Oliveira",
 	"license": "Apache-2.0",
 	"scripts": {
